Changed the design of Live Session. Shows the students in connected students in class roll ascending order. Students now can join in mid quiz. Fixed the cut off screen in mobile quiz window. Made the timer minimal when questions is scrolled in students quiz window. Now questions cannot be edited when view questions is clicked. Added edit qeustion option, it need more works.

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -349,7 +349,7 @@ input[type="text"]:focus, input[type="number"]:focus {
 /* Live Session Layout */
 .live-layout {
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: 1fr;
   gap: 24px;
   height: calc(100% - 80px);
 }
